# tbom-rfc

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  EXECUTIVE_SUMMARY.md  FAQ.md  LICENSE  Makefile  PERFORMANCE.md  README.md  RELEASE_NOTES_v1.0.2.md  SECURITY.md  SECURITY_AUDIT.md  TESTING.md  build-versions.txt  build.sh  mkdocs.yml  pyproject.toml  requirements.txt  tbom-development-history.md  tbom-example-full-v1.0.2.json  tbom-example-minimal-v1.0.2.json  tbom-keys-schema-v1.0.1.json  tbom-schema-v1.0.2.json  tbom-test-artifact.txt  tbom-testvector-keys-v1.0.1.json  tbom-testvector-private-ed25519.jwk.json  tbom-testvector-signed-v1.0.2.json  tbom_mcp_server.py  tbomctl.py  tool-create_note.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
docs/: TERMINAL_DEMO.md  architecture.md  demo.md  explainer.md  index.md  requirements.txt  trust.md
docs/showcase/: README.md  index.md
docs/stylesheets/: extra.css
scripts/: ai_eval.py  build_binaries.py  generate_provenance.py  mutation_test.py  render_demo_gif.py  render_demo_video.py  showcase.py
tests/: test_coverage_gate.py  test_main_guards.py  test_mcp_integration.py  test_render_demo_media.py  test_scripts_argv.py  test_scripts_core.py  test_tbom_mcp_server_unit.py  test_tbomctl.py  test_tbomctl_coverage.py  test_tbomctl_exhaustive.py
